[project]
name = "archivebox"
version = "0.7.2"
description = "Self-hosted internet archiving solution."
authors = [
    { name = "Nick Sweeting", email = "pyproject.toml@archivebox.io" },
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Sociology :: History",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.black]
line-length = 100
target-version = ['py38']

[project.license]
text = "MIT"

[project.optional-dependencies]
sonic = [
    "sonic-client>=0.0.5",
]
ldap = [
    "python-ldap>=3.4.3",
    "django-auth-ldap>=4.1.0",
]

[project.scripts]
archivebox = "archivebox.cli:main"

[project.urls]
Homepage = "https://github.com/ArchiveBox/ArchiveBox"
Source = "https://github.com/ArchiveBox/ArchiveBox"
Documentation = "https://github.com/ArchiveBox/ArchiveBox/wiki"
"Bug Tracker" = "https://github.com/ArchiveBox/ArchiveBox/issues"
Changelog = "https://github.com/ArchiveBox/ArchiveBox/releases"
Roadmap = "https://github.com/ArchiveBox/ArchiveBox/wiki/Roadmap"
Community = "https://github.com/ArchiveBox/ArchiveBox/wiki/Web-Archiving-Community"
Demo = "https://demo.archivebox.io"
Donate = "https://github.com/ArchiveBox/ArchiveBox/wiki/Donations"

[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=69.0.3",
    "wheel",
    "pdm",
    "homebrew-pypi-poet>=0.10.0",
    "recommonmark",
    "sphinx",
    "sphinx-rtd-theme",
    "django-debug-toolbar",
    "djdt_flamegraph",
    "ipdb",
    "pytest",
    "flake8",
    "mypy",
    "django-stubs",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

